GPU subdivision: Last subsurf modifier is always used for GPU subdivision, even when disabled. #96283

Closed
opened 2022-03-10 03:50:05 +01:00 by lumakyu · 15 comments

System Information
Operating system: Arch Linux (last updated Mar 10, 2022)
Graphics card: NVIDIA GeForce GTX 1070
System Info: system-info.txt

Blender Version
Broken: 3.1.0, c77597cd0e
Worked: 3.0.1

Short description of error
This bug only takes hold when GPU Subdivision is enabled.
When multiple SubSurf modifiers are added to an object, the last one in the stack determines the subdivision levels even when it is disabled.
This screenshots showcases the setup and issue: gpu_subdiv_bug_setup.png

This affects not only the viewport, but also renders: gpu_subdiv_bug_render.png

Additionally, setting the subdivision count to 0 causes a crash (image attached is a GIF): gpu_subdiv_bug_crash.gif

Exact steps for others to reproduce the error
Based on the default startup file:

  • Enable GPU Subdivision in Viewport -> Subdivision -> GPU Subdivision.
  • Add two SubSurf modifiers to the default cube.
  • Disable the second SubSurf modifier both in Viewport and Renders.
  • Change the subdivision levels on the second modifier.

I've attached an example file showcasing the issue here: gpu_subdiv_bug.blend

I understand stacking SubSurf modifiers is a little unusual. I use this often in conjunction with drivers to switch between a high-fidelity and low-fidelity SubSurf that are stacked on top of each other.

**System Information** Operating system: Arch Linux (last updated Mar 10, 2022) Graphics card: NVIDIA GeForce GTX 1070 System Info: [system-info.txt](https://archive.blender.org/developer/F12916830/system-info.txt) **Blender Version** Broken: 3.1.0, c77597cd0e15 Worked: 3.0.1 **Short description of error** This bug only takes hold when GPU Subdivision is enabled. When multiple SubSurf modifiers are added to an object, the last one in the stack determines the subdivision levels **even when it is disabled**. This screenshots showcases the setup and issue: ![gpu_subdiv_bug_setup.png](https://archive.blender.org/developer/F12916807/gpu_subdiv_bug_setup.png) This affects not only the viewport, **but also renders**: ![gpu_subdiv_bug_render.png](https://archive.blender.org/developer/F12916813/gpu_subdiv_bug_render.png) Additionally, setting the subdivision count to 0 causes a crash (image attached is a GIF): ![gpu_subdiv_bug_crash.gif](https://archive.blender.org/developer/F12916824/gpu_subdiv_bug_crash.gif) **Exact steps for others to reproduce the error** Based on the default startup file: - Enable GPU Subdivision in Viewport -> Subdivision -> GPU Subdivision. - Add two SubSurf modifiers to the default cube. - Disable the second SubSurf modifier both in Viewport and Renders. - Change the subdivision levels on the second modifier. I've attached an example file showcasing the issue here: [gpu_subdiv_bug.blend](https://archive.blender.org/developer/F12916844/gpu_subdiv_bug.blend) I understand stacking SubSurf modifiers is a little unusual. I use this often in conjunction with drivers to switch between a high-fidelity and low-fidelity SubSurf that are stacked on top of each other.
Author

Added subscriber: @lumakyu

Added subscriber: @lumakyu

#97534 was marked as duplicate of this issue

#97534 was marked as duplicate of this issue

#97361 was marked as duplicate of this issue

#97361 was marked as duplicate of this issue

#96565 was marked as duplicate of this issue

#96565 was marked as duplicate of this issue
Member

Added subscribers: @kevindietrich, @Alaska

Added subscribers: @kevindietrich, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue, even in latest master.

CC @kevindietrich

I can confirm this issue, even in latest master. CC @kevindietrich
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscribers: @Ethan-Hall, @PratikPB2123, @YAFU, @iss

Added subscribers: @Ethan-Hall, @PratikPB2123, @YAFU, @iss
Kévin Dietrich changed title from Wrong level count with multiple SubSurf modifiers (GPU Subdivision only) to Last subsurf modifier is always used for GPU subdivision, even when disabled. 2022-04-08 13:40:21 +02:00
Philipp Oeser changed title from Last subsurf modifier is always used for GPU subdivision, even when disabled. to GPU subdivision: Last subsurf modifier is always used for GPU subdivision, even when disabled. 2022-04-12 16:53:07 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the playbook

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the [playbook ](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook)

Added subscribers: @Mets, @HooglyBoogly

Added subscribers: @Mets, @HooglyBoogly
Member

Added subscriber: @Solus-3

Added subscriber: @Solus-3

This issue was referenced by 68ca12a7fc

This issue was referenced by 68ca12a7fc0eea117103d894609eb46c169ec88b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-04-27 10:24:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96283
No description provided.